# boardrule-rag

./: .gitignore  DEPLOY.md  QUICKSTART.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  migrate.yml  seed-admin.yml  sync-to-hf-space.yml
apps/miniapp/: .env.development  .env.example  .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
apps/miniapp/src/: App.vue  manifest.json  pages.json  shime-uni.d.ts  uni.scss
apps/web/: .env.example  .gitignore  README.md  auth.config.ts  auth.ts  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: auth-session-provider.tsx  extraction-panel.tsx  gemini-model-picker.tsx  index-panel.tsx  mobile-nav.tsx  model-chat-options-panel.tsx  model-credentials-panel.tsx  model-rag-options-panel.tsx  model-slots-panel.tsx  model-tag-filter-chips.tsx  models-chat-templates.tsx  models-extraction-templates.tsx  models-index-templates.tsx  models-sub-nav.tsx  must-change-password-redirect.tsx  page-thumbnail-picker.tsx  page-thumbnails.tsx  qwen-endpoint-picker.tsx  retrieval-smoke-panel.tsx  rules-preview.tsx  sidebar-nav.tsx  (+12 more)
scripts/: env-sync.sh
services/rule_engine/: .env.example  .gitignore  Dockerfile  EXTRACTION_FLOW.md  README.md  langgraph.json  langgraph_studio.py  pyproject.toml
services/rule_engine/api/: deps.py  main.py  middleware_api_key.py
services/rule_engine/api/routers/: chat.py  extract.py  graph_meta.py  health.py  index.py  index_jobs.py
services/rule_engine/eval/: README.md  check_extraction_output.py
services/rule_engine/eval/fixtures/: README.md
services/rule_engine/graphs/: __init__.py  extraction_graph.py  extraction_settings.py  state.py
services/rule_engine/graphs/nodes/: __init__.py  batch_splitter.py  chapter_extract.py  merge_and_refine.py  quickstart_and_questions.py  route_by_complexity.py  toc_analyzer.py
services/rule_engine/ingestion/: __init__.py  bm25_retriever.py  hybrid_retriever.py  index_builder.py  index_storage_remote.py  jina_rerank.py  llamaparse_loader.py  node_builders.py  page_jobs.py  page_raster.py  rerank_cache.py  rulebook_query.py  vector_stores.py
services/rule_engine/prompts/: chapter_extract_strict.md  chapter_extract_vision.md  chat_system.md  merge_refine.md  quickstart_and_questions.md  rule_style_core.md  toc_analyzer.md  toc_analyzer_vision.md
services/rule_engine/rule_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/rule_engine/scripts/: print_extraction_mermaid.py
services/rule_engine/tests/: test_ai_gateway_config.py  test_bm25_cjk.py  test_chat_condense_heuristic.py  test_extraction_routing.py  test_index_builder_dsn.py  test_index_storage_remote.py  test_jina_rerank.py  test_llm_generate.py  test_node_builders.py  test_page_jobs_restore.py  test_page_markers.py  test_retrieval_config.py  test_retry_rate_limit.py  test_toc_analyzer.py
services/rule_engine/tests/fixtures/: EXTRACTION_ACCEPTANCE.md
services/rule_engine/utils/: ai_gateway.py  anthropic_client.py  bedrock_converse.py  bedrock_model_id.py  dashscope_client.py  exception_format.py  gemini.py  json_extract.py  llm_generate.py  openrouter_client.py  page_markers.py  pagination.py  paths.py  prompt_context.py  retry.py
services/rule_engine/utils/providers/: __init__.py  anthropic_provider.py  base.py  gemini.py  openai_compat.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260401100000_app_schema.sql  20260403100000_extensions_and_game_assets_bucket.sql  20260403100000_extensions_and_storage_buckets.sql  20260409120000_boardrule_indexes_bucket.sql
(+157 files in other folders)
