[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rule-engine"
version = "0.1.0"
description = "Board game rule extraction: vision PDF pages + LangGraph + Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "python-dotenv>=1.0",
  "google-genai>=1.0",
  "pdf2image>=1.17",
  "Pillow>=10.0",
  "langgraph>=0.2.40",
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg[binary]>=3.1",
  "psycopg-pool>=3.2",
  "boto3>=1.34.0",
  "llama-index-core>=0.14.5,<0.15",
  "llama-index-retrievers-bm25>=0.2.0",
  "llama-index-embeddings-google-genai>=0.1.0",
  "llama-index-embeddings-openai>=0.1.0",
  "llama-index-embeddings-bedrock>=0.7.4,<0.8",
  "llama-index-llms-google-genai>=0.1.0",
  "llama-index-llms-openai>=0.1.0",
  "llama-index-llms-openrouter>=0.1.0",
  "llama-index-llms-bedrock-converse>=0.13.0,<0.14",
  "llama-index-vector-stores-postgres>=0.2.0",
  "sentence-transformers>=2.2.0",
  "jinja2>=3.1",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "langgraph-cli[inmem]>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "graphs*", "ingestion*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"
